# accidental-noise-library

./: .gitignore  Bin  CCellularGenerator.md  CImplicitAutoCorrect.md  CImplicitBasisFunction.md  CImplicitBlend.md  CImplicitBrightContrast.md  CImplicitCellular.md  CImplicitConstant.md  CImplicitCurve.md  CImplicitFractal.md  CImplicitSeamlessMapping.md  CImplicitVoronoi.md  CMakeLists.txt  DomainRotation.md  GeneratorModule.md  LICENSE  ModuleBasics.md  ProjectHome.md  README.md  anl.h  imaging.h  main.cpp  premake4.lua  premake5.lua  testfactory.cpp  testfactory.h  types.h  vectortypes.h
ANL_Builder/: CMakeLists.txt  treecontainer.h
ANL_Imaging/: CMakeLists.txt  anl_imaging.h  erosion.h  implicitbufferblur.cpp  implicitbufferbumpmap.h  implicitbufferimplicitadapter.cpp  implicitbufferimplicitadapter.h  implicitbufferscaletorange.cpp  implicitbufferunarymath.cpp  mapping.cpp  mapping.h  rasterization.cpp  rasterization.h  rgbabufferblur.h  rgbabufferimplicitbufferadapter.cpp  rgbabufferimplicitbuffermultiply.cpp  rgbabufferimplicitbuffermultiply.h  rgbabufferrgbaadapter.h
ANL_Noise/: CMakeLists.txt  anl.h  cellulargen.cpp  implicitautocorrect.cpp  implicitautocorrect.h  implicitbasisfunction.cpp  implicitblend.cpp  implicitblend.h  implicitbrightcontrast.cpp  implicitbrightcontrast.h  implicitcellular.cpp  implicitcellular.h  implicitclamp.cpp  implicitcombiner.cpp  implicitcombiner.h  implicitcurve.cpp  implicitcurve.h  implicitextractrgbachannel.h  implicitfractal.cpp  implicitfractal.h  implicitfunctiongradient.cpp  implicitgradient.cpp  implicitgradient.h  implicitmodifier.h  implicitmodulebase.h  implicitnormalizecoords.h  implicitrotatedomain.h  implicitsawtooth.h  implicitscaledomain.cpp  implicitscaleoffset.cpp  implicitscaleoffset.h  implicitselect.cpp  implicitselect.h  implicitsphere.h  implicittiers.cpp  implicittiers.h  implicittranslatedomain.cpp  implicittriangle.cpp  implicittriangle.h  noise_gen.h  (+2 more)
ANL_RGBA/: CMakeLists.txt  anl_rgba.h  hsv.cpp  rgba.h  rgbablend.cpp  rgbablend.h  rgbablendops.cpp  rgbablendops.h  rgbacolorops.cpp  rgbacolorops.h  rgbacomposechannels.cpp  rgbacomposechannels.h  rgbaconstant.cpp  rgbacurve.h  rgbahsvtorgba.h  rgbaimplicitgrayscale.cpp  rgbaimplicitgrayscale.h  rgbamodulebase.h  rgbanormalize.h  rgbarotatecolor.cpp  rgbarotatecolor.h  rgbaselect.h
Bindings/: Bindings.cpp  CMakeLists.txt  Makefile  anl_bindings.h  bind_anl.cpp  bind_anl.pkg  bind_anl_angelscript.cpp  cmake_install.cmake
Builder/: CMakeLists.txt  Makefile  cmake_install.cmake  treecontainer.cpp  treecontainer.h
Examples/: bakeboxtile.lua  baking.lua  basicexample.lua  blendtest.lua  blockworld.lua  cellular.lua  curve.lua  domainrotation.lua  fractaltest.lua  gradientnoise.lua  gradvalnoise.lua  islandtest.lua  loadobj.lua  map.lua  multicolor.lua  randomtreegenerator.lua  rasterization.lua  raymarch.lua  simplexnoise.lua  terms.lua  testmarch.lua  tokenize.lua  valuenoise.lua  volumetricterraintest.lua  whitenoise.lua
Expression/: expressionbuilder.cpp  expressionbuilder.h  parsing.cpp  parsing.inl
Framework/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Imaging/: CMakeLists.txt  Makefile  anl_imaging.h  arrayoperations.cpp  arrayoperations.h  cmake_install.cmake  erosion.cpp  erosion.h  imaging.cpp  imaging.h  imaging.inl  implicitbufferbase.cpp  implicitbufferbase.h  implicitbufferblur.cpp  implicitbufferblur.h  implicitbufferbumpmap.cpp  implicitbufferbumpmap.h  implicitbufferconstant.cpp  implicitbufferconstant.h  implicitbufferfile.cpp  implicitbufferfile.h  implicitbufferimplicitadapter.cpp  implicitbufferimplicitadapter.h  implicitbufferscaletorange.cpp  implicitbufferscaletorange.h  implicitbufferselect.cpp  implicitbufferselect.h  implicitbuffersimpleerode.cpp  implicitbuffersimpleerode.h  implicitbufferunarymath.cpp  implicitbufferunarymath.h  implicitrgbadotproduct.cpp  mapping.cpp  mapping.h  rasterization.h  rgbabufferbase.h  rgbabufferblur.cpp  rgbabufferblur.h  rgbabufferimplicitbufferadapter.cpp  rgbabufferimplicitbufferadapter.h  (+9 more)
Module/: CMakeLists.txt  Makefile  anl.cpp  cmake_install.cmake
Noise/: CMakeLists.txt  Makefile  anl_noise.h  cellulargen.cpp  cellulargen.h  cmake_install.cmake  implicitautocorrect.cpp  implicitautocorrect.h  implicitbasisfunction.cpp  implicitbasisfunction.h  implicitblend.cpp  implicitblend.h  implicitbrightcontrast.cpp  implicitbrightcontrast.h  implicitcache.cpp  implicitcache.h  implicitcellular.cpp  implicitcellular.h  implicitclamp.cpp  implicitclamp.h  implicitcombiner.cpp  implicitcombiner.h  implicitconstant.cpp  implicitconstant.h  implicitcurve.cpp  implicitcurve.h  implicitextractrgbachannel.cpp  implicitextractrgbachannel.h  implicitfractal.cpp  implicitfractal.h  implicitfunctiongradient.cpp  implicitfunctiongradient.h  implicitgradient.cpp  implicitgradient.h  implicitmagnitude.cpp  implicitmagnitude.h  implicitmath.cpp  implicitmath.h  implicitmodulebase.cpp  implicitmodulebase.h  (+31 more)
Noise/templates/: tvec2d.h
Processing/: erosion.cpp  erosion.h  erosion.inl
RGBA/: CMakeLists.txt  Makefile  anl_rgba.h  cmake_install.cmake  hsv.h  rgba.h  rgbablend.cpp  rgbablend.h  rgbablendops.cpp  rgbablendops.h  rgbacolorops.cpp  rgbacolorops.h  rgbacomposechannels.cpp  rgbacomposechannels.h  rgbaconstant.cpp  rgbaconstant.h  rgbacurve.cpp  rgbacurve.h  rgbahsvtorgba.cpp  rgbahsvtorgba.h  rgbaimplicitgrayscale.cpp  rgbaimplicitgrayscale.h  rgbamodulebase.h  rgbanormalize.cpp  rgbanormalize.h  rgbargbatohsv.cpp  rgbargbatohsv.h  rgbarotatecolor.cpp  rgbarotatecolor.h  rgbaselect.cpp  rgbaselect.h
VM/: CMakeLists.txt  cmake_install.cmake  coordinate.cpp  coordinate.h  coordinate.inl  hashing.cpp  hashing.inl  instruction.h  kernel.cpp  kernel.h  kernel.inl  noise_gen.cpp  noise_gen.h  noise_gen.inl  noise_lut.cpp  noise_lut.h  noise_lut.inl  random_gen.h  types.h  utility.h  vm.cpp  vm.h  vm.inl
Volume/: CMakeLists.txt  Makefile  anlmesh.cpp  anlmesh.h  cmake_install.cmake  marchvolume.cpp  marchvolume.h  volumeadapter.cpp  volumeadapter.h
templates/: tarrays.h
(+5 files in other folders)
